syntax = "proto3";

//==============================================================================
// FortiLedger360 Enterprise Security Suite - Tenant Protobuf Definition
//------------------------------------------------------------------------------
// File Path : FortiLedger360/protos/fortiledger360/v1/tenant.proto
// Language  : Protocol Buffers v3 (C++ code generated via `protoc`)
//==============================================================================
//
//  Copyright (c) 2024 FortiLedger360
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.
//
//==============================================================================
//
//  PURPOSE
//  -------
//  Top-level schema representing a “Tenant” within FortiLedger360.  A tenant
//  is the primary billing and security-isolation boundary for all services
//  (load-balancers, scanners, backup nodes, etc.).  These messages are
//  consumed by multiple micro-services (e.g., BillingHub, Scanner, Metrics)
//
//  NOTE
//  ----
//  This schema is *source of truth* for code generated in C++, Go, and TS.
//  Any modification must follow the RFC workflow and semantic versioning.
//
//==============================================================================

package fortiledger360.v1;

//--------------------------------------------------------------------
// Proto-compiler options
//--------------------------------------------------------------------

// Emit C++ files into nested namespace ::fortiledger360::v1
option cc_enable_arenas         = true;
option optimize_for             = SPEED;
option csharp_namespace         = "FortiLedger360.V1";
option java_package             = "com.fortiledger360.v1";
option java_outer_classname     = "TenantProto";
option go_package               = "github.com/fortiledger360/fortiledger360-go/v1;v1";

//--------------------------------------------------------------------
// Imports
//--------------------------------------------------------------------
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

//--------------------------------------------------------------------
// Enumerations
//--------------------------------------------------------------------

/**
 * Allowed states for a tenant throughout its lifecycle.
 */
enum TenantStatus {
  TENANT_STATUS_UNSPECIFIED = 0;
  TENANT_STATUS_ACTIVE      = 1;
  TENANT_STATUS_SUSPENDED   = 2; // Admin suspension or payment failure.
  TENANT_STATUS_TERMINATED  = 3; // Soft deletion with data retention.
}

/**
 * Subscription/billing tiers for security-service catalog.
 */
enum SubscriptionPlan {
  SUBSCRIPTION_PLAN_UNSPECIFIED = 0;
  SUBSCRIPTION_PLAN_DEVELOPER   = 1; // Limited SLA, pay-as-you-go scans.
  SUBSCRIPTION_PLAN_BUSINESS    = 2; // 24x7 SLA, daily backups.
  SUBSCRIPTION_PLAN_ENTERPRISE  = 3; // Best effort, on-prem DR, etc.
}

//--------------------------------------------------------------------
// Messages
//--------------------------------------------------------------------

/**
 * Core tenant resource.
 */
message Tenant {
  string               id            = 1;  // UUID v4.
  string               name          = 2;  // Display label.
  string               contact_email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

  SubscriptionPlan     subscription_plan = 6;
  TenantStatus         status            = 7;

  // Arbitrary metadata useful for UI tags, integration hooks, etc.
  // Stored as JSON internally.
  google.protobuf.Struct annotations = 8;

  // Map of custom key/value pairs that can be set by the customer or admin.
  map<string, string>  labels = 9;
}

/**
 * Event emitted whenever a tenant’s lifecycle state changes.
 * These events flow through the central event bus (NATS/JetStream).
 */
message TenantEvent {
  string               event_id   = 1;   // ULID for sorting by time.
  google.protobuf.Timestamp occurred_at = 2;
  string               tenant_id  = 3;
  TenantStatus         new_status = 4;
  string               reason     = 5;   // Human readable.
}

//--------------------------------------------------------------------
// Request / Response messages
//--------------------------------------------------------------------

// CreateTenant -------------------------------------------------------
message CreateTenantRequest {
  string               name          = 1;
  string               contact_email = 2;
  SubscriptionPlan     subscription_plan = 3;
  map<string, string>  labels = 4;
}

message CreateTenantResponse {
  Tenant tenant = 1;
}

// GetTenant ----------------------------------------------------------
message GetTenantRequest {
  string id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

// ListTenants --------------------------------------------------------
message ListTenantsRequest {
  // Filter by status/plan etc.  Simple first-pass filter string.
  // e.g. "status=ACTIVE,plan=BUSINESS"
  string filter = 1;

  // Pagination
  int32  page_size  = 2;
  string page_token = 3;
}

message ListTenantsResponse {
  repeated Tenant tenants        = 1;
  string          next_page_token = 2;
}

// UpdateTenant -------------------------------------------------------
message UpdateTenantRequest {
  Tenant                        tenant      = 1;
  google.protobuf.FieldMask     update_mask = 2;
}

message UpdateTenantResponse {
  Tenant tenant = 1;
}

// SuspendTenant ------------------------------------------------------
message SuspendTenantRequest {
  string id     = 1;
  string reason = 2;
}

message SuspendTenantResponse {
  Tenant tenant = 1;
}

// TerminateTenant ----------------------------------------------------
message TerminateTenantRequest {
  string id            = 1;
  bool   hard_delete   = 2; // If true, destroys immediately with no retention.
  string reason        = 3;
}

message TerminateTenantResponse {
  Tenant tenant = 1;
}

//--------------------------------------------------------------------
// gRPC Service Definition
//--------------------------------------------------------------------

/**
 * gRPC service responsible for managing tenant lifecycle.
 * Implemented by Orchestration layer; called by API-gateway and
 * internal components.
 */
service TenantService {
  rpc CreateTenant   (CreateTenantRequest)   returns (CreateTenantResponse);
  rpc GetTenant      (GetTenantRequest)      returns (GetTenantResponse);
  rpc ListTenants    (ListTenantsRequest)    returns (ListTenantsResponse);
  rpc UpdateTenant   (UpdateTenantRequest)   returns (UpdateTenantResponse);

  // State transitions
  rpc SuspendTenant  (SuspendTenantRequest)  returns (SuspendTenantResponse);
  rpc TerminateTenant(TerminateTenantRequest)returns (TerminateTenantResponse);

  // Emits google.protobuf.Empty to confirm event publish completed.
  rpc PublishTenantEvent(TenantEvent) returns (google.protobuf.Empty);
}